# rust_callback_test

./: Cargo.toml  README.md
src/: block.rs  frame.rs  main.rs  sender.rs
