[package]
name = "rust_callback_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
quiche = "0.16.0"
calloop = "0.10.5"
dtp_utils = { path = "./dtp_utils" }
docopt = "1"
anyhow = "1"
rand = "0.8"
env_logger = "0.9"